[metadata]
name = fm_core
summary = Fault Management common components
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://opendev.org/starlingx/fault
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    fm_core

[wheel]
universal = 1
